service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
spec:
  type: clusterIP
  selector:
    greeting: hello
    department: world
  ports:
  - protocol: TCP
    port: 50000
