ingress-https.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
spec:
  tls:
  - hosts:
      - "example.com"
    secretName: example-com-certs
  rules:
  - host: "example.com"
    http:
      paths:
      - backend:
          serviceName: hello-world
          servicePort: 50000
