ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-ingress
spec:
  tls:
  - hosts:
      - "example.com"
    secretName: nginx-certs
  rules:
  - host: "example.com"
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
